--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.codeboy.qianghongbao" >
+    package="com.codeboy.qianghongbao">
 
-    <uses-permission android:name="android.permission.DISABLE_KEYGUARD"/>
+    <uses-permission android:name="android.permission.DISABLE_KEYGUARD" />
     <uses-permission android:name="android.permission.GET_TASKS" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
@@ -30,11 +30,11 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher_v2"
         android:label="@string/app_name"
-        android:theme="@style/Theme.AppCompat.Light" >
+        android:theme="@style/Theme.AppCompat.Light">
 
         <activity
             android:name=".MainActivity"
-            android:label="@string/main_name" >
+            android:label="@string/main_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -43,21 +43,24 @@
         </activity>
 
 
-        <activity android:name=".WechatSettingsActivity"
-                  android:label="@string/wechat_settings"/>
+        <activity
+            android:name=".WechatSettingsActivity"
+            android:label="@string/wechat_settings" />
 
-        <activity android:name=".NotifySettingsActivity"
-                  android:label="@string/notify_settings"/>
+        <activity
+            android:name=".NotifySettingsActivity"
+            android:label="@string/notify_settings" />
 
-        <activity android:name=".AboutMeActivity"
-                  android:label="@string/about_title"/>
+        <activity
+            android:name=".AboutMeActivity"
+            android:label="@string/about_title" />
 
         <service
-            android:name=".QiangHongBaoService"
+            android:name=".GrabWXRedPacketService"
             android:enabled="true"
             android:exported="true"
             android:label="@string/service_name"
-            android:permission="android.permission.BIND_ACCESSIBILITY_SERVICE" >
+            android:permission="android.permission.BIND_ACCESSIBILITY_SERVICE">
             <intent-filter>
                 <action android:name="android.accessibilityservice.AccessibilityService" />
             </intent-filter>
@@ -67,9 +70,10 @@
                 android:resource="@xml/qianghongbao_service_config" />
         </service>
 
-        <service android:name=".QHBNotificationService"
-                 android:label="@string/app_name"
-                 android:permission="android.permission.BIND_NOTIFICATION_LISTENER_SERVICE">
+        <service
+            android:name=".NotificationService"
+            android:label="@string/app_name"
+            android:permission="android.permission.BIND_NOTIFICATION_LISTENER_SERVICE">
 
             <intent-filter>
                 <action android:name="android.service.notification.NotificationListenerService" />
